--- a/css/navbar.css
+++ b/css/navbar.css
@@ -99,7 +99,8 @@ nav{
         background-color: #067fb7;
         width: 100%;
         transform: translateX(100%);
-        transition: transform 0.6s ease-in;
+        transition: all 0.6s ease-in;
+        display: none;
     }
 
     .ul_class li{
@@ -123,8 +124,8 @@ nav{
     }
 
    .ul_return{
+       display: block;
         transform: translateX(0%);
-        
    }
 
    .ul_return li{
