--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,12 @@ body{
     height: 60rem;
     margin: 0 auto;
     padding: 0 2rem;
-    border: 2px solid #000000;
+    /* border: 2px solid #000000; */
 }
+/* ! Main Container layout Style End */
+
 
 .space{
     width: 100%;
-    height: 65rem;
-}
+    height: 60rem;
+} 
