--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,6 +2,10 @@ nav{
     width: 100%;
     height: 8rem;
     background-color: #067fb7;
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 .area_nav{
@@ -101,6 +105,7 @@ nav{
         transform: translateX(100%);
         transition: all 0.6s ease-in;
         display: none;
+        z-index: 1000;
     }
 
     .ul_class li{
@@ -124,8 +129,12 @@ nav{
     }
 
    .ul_return{
-       display: block;
-        transform: translateX(0%);
+    position: absolute;
+    right:  0;
+    top: 8rem;
+    display: block;
+    transform: translateX(0%);
+    z-index: 1000;
    }
 
    .ul_return li{
